Decided to encode SVG

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="container">
             <div class="header__inner">
                 <a href="https://vadimkurkin.com/" class="header__logo" target="_blank">
-                    <img class="header__logo--desktop" src="img/logo.png" alt="Образовательный центр Вадима Куркина">
-                    <img class="header__logo--mobile" src="img/logo-w.png" alt="Образовательный центр Вадима Куркина">
+                    <img class="header__logo--desktop" src="img/logo/logo.png" alt="Образовательный центр Вадима Куркина">
+                    <img class="header__logo--mobile" src="img/logo/logo-white.png" alt="Образовательный центр Вадима Куркина">
                 </a> <!-- /.header__logo -->
                 <div class="header__call">
                     <div class="header__call--img">
@@ -96,7 +96,7 @@
     <section class="intro">
         <div class="container">
             <div class="intro__inner">
-                <img class="intro__img-mobile" src="img/bg-intro-mobile-min.png" alt="Image">
+                <img class="intro__img-mobile" src="img/backgrounds/bg-intro-mobile-min.png" alt="Image">
                 <h1 class="title title-intro">Новогодняя распродажа курсов</h1>
                 <!-- /.title -->
                 <p class="subtitle text">Подари себе новую жизнь. Раскрой
@@ -153,9 +153,9 @@
     <section class="video">
         <div class="container">
             <div class="video__inner">
-                <h2 class="title title-video">Заголовок для видео</h2>
+                <!-- <h2 class="title title-video">Заголовок для видео</h2> -->
                 <!-- /.title -->
-                <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!-- <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
             </div>
             <!-- /.video__inner -->
         </div>
@@ -883,7 +883,7 @@
             <div class="autor__inner">
                 <div class="autor__inner--line">
                     <div class="autor__inner--item">
-                        <img src="img/vadim-min.jpg" loading="lazy" alt="Вадим Куркин" class="autor__inner--img">
+                        <img src="img/autor/vadim-min.jpg" loading="lazy" alt="Вадим Куркин" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
@@ -924,7 +924,7 @@
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
-                        <img src="img/yulya-min.jpg" loading="lazy" alt="Юлия Куркина" class="autor__inner--img">
+                        <img src="img/autor/yulya-min.jpg" loading="lazy" alt="Юлия Куркина" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                 </div>
