--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Этот курс поможет вам понять, принять и исцелить себя через работу со своим «внутренним ребенком». Вы получите специальные методики, помогающие улучшить психологическое и эмоциональное состояние, избавиться от обид и неуверенности в себе, научиться любить и принимать любовь.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость курса: 550 рублей</p>
+                            <p class="modal__inf--price">Стоимость курса: 1200 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="https://kurs-kurkin.ru/sale1" onClick="fbq('track', 'Purchase', {value:5800.00, currency:'RUB', id:'ПакетI'})" target="_blank">Купить I пакет</a>
                             <!-- /.button -->
@@ -429,7 +429,7 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Этот курс поможет вам понять, принять и исцелить себя через работу со своим «внутренним ребенком». Вы получите специальные методики, помогающие улучшить психологическое и эмоциональное состояние, избавиться от обид и неуверенности в себе, научиться любить и принимать любовь.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость курса: 550 рублей</p>
+                            <p class="modal__inf--price">Стоимость курса: 1200 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="https://kurs-kurkin.ru/sale2" onClick="fbq('track', 'Purchase', {value:9900.00, currency:'RUB', id:'ПакетII'})" target="_blank">Купить II пакет</a>
                             <!-- /.button -->
@@ -562,7 +562,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex21" rel="modal:open">На выбор - I ступень «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
+                        <li><a class="package__item--body__link white top top" href="#ex21" rel="modal:open">На выбор - I ступень «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
                         <div id="ex21" class="modal modal__inf">
                             <p class="modal__inf--title modal__inf--title__bold">Курс «Время твоего счастья - сейчас» </p>
                             <!-- /.modal__inf-title -->
@@ -667,7 +667,7 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Этот курс поможет вам понять, принять и исцелить себя через работу со своим «внутренним ребенком». Вы получите специальные методики, помогающие улучшить психологическое и эмоциональное состояние, избавиться от обид и неуверенности в себе, научиться любить и принимать любовь.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость курса: 550 рублей</p>
+                            <p class="modal__inf--price">Стоимость курса: 1200 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="https://kurs-kurkin.ru/sale3" onClick="fbq('track', 'Purchase', {value:14700.00, currency:'RUB', id:'ПакетIII'})" target="_blank">Купить III пакет</a>
                             <!-- /.button -->
@@ -800,7 +800,7 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex31" rel="modal:open">На выбор - две ступени «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
+                        <li><a class="package__item--body__link white top top-red" href="#ex31" rel="modal:open">На выбор - две ступени «Время твоего счастья - сейчас» или «Секреты стабильной самооценки»</a></li>
                         <div id="ex31" class="modal modal__inf">
                             <p class="modal__inf--title modal__inf--title__bold">Курс «Время твоего счастья - сейчас» </p>
                             <!-- /.modal__inf-title -->
@@ -814,13 +814,13 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Курс дает глубокое понимание себя, индивидуальных особенностей своей личности и самооценки. Вы составите цельную картину своей самооценки, получите специальные техники и практики для ее коррекции. И в итоге научитесь любить и ценить себя, станете более уверены в себе. Курс дает возможность полностью изменить свою жизнь, так как самооценка - одна из самых важных особенностей нашего характера и влияет на все сферы нашей жизни.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость двух ступеней каждого курса: 17 500 рублей</p>
+                            <p class="modal__inf--price">Стоимость двух ступеней каждого курса: 19 000 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="https://kurs-kurkin.ru/sale3" onClick="fbq('track', 'Purchase', {value:14700.00, currency:'RUB', id:'ПакетIII'})" target="_blank">Купить III пакет</a>
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex32" rel="modal:open">«Родители, род, семья» - две ступени</a></li>
+                        <li><a class="package__item--body__link white top top-red" href="#ex32" rel="modal:open">«Родители, род, семья» - две ступени</a></li>
                         <div id="ex32" class="modal modal__inf">
                             <p class="modal__inf--title">Курс «Родители, род, семья» </p>
                             <!-- /.modal__inf-title -->
@@ -828,13 +828,13 @@
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Каким ресурсом для нас могут стать семья и род, и как использовать этот ресурс в полную силу. Все о родовых и семейных системах и нашем месте в них. Как работать с негативными родовыми установками и менять свое настоящее и будущее к лучшему. Плюс: все об отношениях с родителями, самыми главными людьми в нашей жизни. Как они влияют на все, что с нами происходит, как простить обиды, избавиться от чувства вины, принять и полюбить родителей и тем самым открыть себе дорогу в новое счастливое будущее.</p>
                             <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость курса: 19 000 рублей</p>
+                            <p class="modal__inf--price">Стоимость курса: 17 000 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="https://kurs-kurkin.ru/sale3" onClick="fbq('track', 'Purchase', {value:14700.00, currency:'RUB', id:'ПакетIII'})" target="_blank">Купить III пакет</a>
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex33" rel="modal:open">«Осознанное родительство» - две ступени</a></li>
+                        <li><a class="package__item--body__link white top top-red" href="#ex33" rel="modal:open">«Осознанное родительство» - две ступени</a></li>
                         <div id="ex33" class="modal modal__inf">
                             <p class="modal__inf--title">Курс «Осознанное родительство» </p>
                             <!-- /.modal__inf-title -->
