--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <section class="video">
         <div class="container">
             <div class="video__inner">
-                <h2 class="title title-video">Заголовок для видео</h2>
+                <h2 class="title title-video">Как получать подарки</h2>
                 <!-- /.title -->
                 <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/6sLREFUgjA8" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
