--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="preload" href="js/timer.js" as="script">
+    <link rel="preload" href="css/style_1.css" as="style">
+    <link rel="preload" href="js/timer_1.js" as="script">
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style_1.css" rel="stylesheet">
 
      <!-- FAVICON -->
      <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -167,7 +167,7 @@
         <!-- /.title -->
         <div class="package__inner">
             <div class="package__item">
-                <img class="package__img package__img--white" src="img/animal-1.svg" alt="Бычок" loading="lazy">
+                <img class="package__img package__img--white" src="img/art-elements/animal_11.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
                     <h4 class="package__item--header__title">I пакет</h4>
                     <!-- /.package__item-header__title -->
@@ -368,7 +368,7 @@
             </div>
             <!-- /.package__item -->
             <div class="package__item">
-                <img class="package__img package__img--red" src="img/animal-2.svg" alt="Бычок" loading="lazy">
+                <img class="package__img package__img--red" src="img/art-elements/animal_22.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
                     <div class="mostpop">
                         Рекомендуем!
@@ -427,20 +427,6 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex24" rel="modal:open">«Как найти свой талант»</a></li>
-                        <div id="ex24" class="modal modal__inf">
-                            <p class="modal__inf--title">Курс «Как найти свой талант»</p>
-                            <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text modal__inf--text__bold">3 практических урока</p>
-                            <!-- /.modal__inf-text -->
-                            <p class="modal__inf--text">Готовая инструкция, как раскрыть свой уникальный талант и найти свое предназначение. После курса вы узнаете свои сильные стороны и поймете, какое занятие может стать вашим призванием и главным делом жизни.</p>
-                            <!-- /.modal__inf-text -->
-                            <p class="modal__inf--price">Стоимость курса: 4500 рублей</p>
-                            <!-- /.modal__inf-price -->
-                            <a class="button button-more" href="https://kurs-kurkin.ru/sale2" onClick="fbq('track', 'Purchase', {value:9900.00, currency:'RUB', id:'ПакетII'})" target="_blank">Купить II пакет</a>
-                            <!-- /.button -->
-                        </div>
-                        <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white new new-white" href="#ex25" rel="modal:open">«Антиконфликт»</a></li>
                         <div id="ex25" class="modal modal__inf">
                             <p class="modal__inf--title">Курс «Антиконфликт»</p>
@@ -452,6 +438,20 @@
                             <p class="modal__inf--text">Конфликт - ваш враг или друг? Учимся находить выход из любого конфликта, делая его конструктивным. Разбираемся в причинах конфликтов в семье, на работе и с друзьями, учимся понимать свои потребности и потребности других, тренируемся правильно договариваться и достигать целей.</p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость курса: 3500 рублей</p>
+                            <!-- /.modal__inf-price -->
+                            <a class="button button-more" href="https://kurs-kurkin.ru/sale2" onClick="fbq('track', 'Purchase', {value:9900.00, currency:'RUB', id:'ПакетII'})" target="_blank">Купить II пакет</a>
+                            <!-- /.button -->
+                        </div>
+                        <!-- /.package__link-inf -->
+                        <li><a class="package__item--body__link white" href="#ex24" rel="modal:open">«Как найти свой талант»</a></li>
+                        <div id="ex24" class="modal modal__inf">
+                            <p class="modal__inf--title">Курс «Как найти свой талант»</p>
+                            <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text modal__inf--text__bold">3 практических урока</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Готовая инструкция, как раскрыть свой уникальный талант и найти свое предназначение. После курса вы узнаете свои сильные стороны и поймете, какое занятие может стать вашим призванием и главным делом жизни.</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--price">Стоимость курса: 4500 рублей</p>
                             <!-- /.modal__inf-price -->
                             <a class="button button-more" href="https://kurs-kurkin.ru/sale2" onClick="fbq('track', 'Purchase', {value:9900.00, currency:'RUB', id:'ПакетII'})" target="_blank">Купить II пакет</a>
                             <!-- /.button -->
@@ -610,7 +610,7 @@
             </div>
             <!-- /.package__item -->
             <div class="package__item">
-                <img class="package__img package__img--green" src="img/animal-3.svg" alt="Бычок" loading="lazy">
+                <img class="package__img package__img--green" src="img/art-elements/animal_33.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
                     <h4 class="package__item--header__title white">III пакет</h4>
                     <!-- /.package__item-header__title -->
@@ -977,7 +977,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.32/moment-timezone-with-data.min.js"></script>
-    <script src="js/timer.js"></script>
+    <script src="js/timer_1.js"></script>
     <script src="js/jquery.modal.min.js"></script>
 </body>
 </html>
