--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <link rel="preload" href="fonts/gilroy-black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-
     <link rel="preload" href="css/style_1.css" as="style">
     <link rel="preload" href="js/timer_1.js" as="script">
-
     <link href="css/style_1.css" rel="stylesheet">
-
      <!-- FAVICON -->
      <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
      <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -43,24 +40,23 @@
      <meta property="twitter:image" content="https://vadimkurkin.com/sale/snippet-sale.jpg">
      <meta property="og:image:type" content="image/jpg">
      <!-- END OPEN GRAPH CODE -->
-
-         <!-- Facebook Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1016908631673402');
-    fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1016908631673402&ev=PageView&noscript=1"
-    />
-</noscript>
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '1016908631673402');
+        fbq('track', 'PageView');
+        </script>
+        <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=1016908631673402&ev=PageView&noscript=1"
+        />
+    </noscript>
     <title>Новогодняя распродажа</title>
 </head>
 <body>
@@ -155,7 +151,7 @@
             <div class="video__inner">
                 <h2 class="title title-video">Как получать подарки</h2>
                 <!-- /.title -->
-                <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/6sLREFUgjA8" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/6sLREFUgjA8" allow="accelerometer; autoplay; clipboard-write;" allowfullscreen></iframe>
             </div>
             <!-- /.video__inner -->
         </div>
