Deleted facebook pixel

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <meta property="og:image:type" content="image/jpg">
      <!-- END OPEN GRAPH CODE -->
     <!-- Facebook Pixel Code -->
-    <script>
+    <!-- <script>
         !function(f,b,e,v,n,t,s)
         {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -56,7 +56,7 @@
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=1016908631673402&ev=PageView&noscript=1"
         />
-    </noscript>
+    </noscript> -->
     <title>Новогодняя распродажа</title>
 </head>
 <body>
